[project]
name = "datalab-server"
readme = "README.md"
keywords = []
license = { text = "MIT" }
authors = [{ name = "Matthew Evans", email = "matthew@ml-evs.science" }, { name = "Joshua Bocarsly" }]
dynamic = ["version"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "Topic :: Other/Nonlisted Topic",
    "Topic :: Scientific/Engineering",
]

requires-python = ">= 3.10, < 3.12"

dependencies = [
    "bokeh ~= 3.6",
    "matplotlib ~= 3.8",
    "periodictable ~= 1.7",
    "pydantic[email, dotenv] < 2.0",
    "pint ~= 0.24",
    "pandas[excel] ~= 2.2",
]

[project.urls]
homepage = "https://github.com/the-grey-group/datalab"
repository = "https://github.com/the-grey-group/datalab"
documentation = "https://the-datalab.readthedocs.io"
changelog = "https://github.com/the-grey-group/datalab/releases"

[build-system]
requires = ["setuptools >= 62", "setuptools_scm ~= 8.1", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["pydatalab"]
include = ["pydatalab"]
namespaces = false

[tool.setuptools_scm]
root = ".."
fallback_version = "0.1.0"

[project.optional-dependencies]
dev = [
    "pytest ~= 8.2",
    "pytest-cov ~= 5.0",
    "pytest-dependency ~= 0.6",
    "pre-commit ~= 4.0",
    "mongomock ~= 4.1",
    "mkdocs ~= 1.6",
    "mkdocs-material ~= 9.5",
    "mkdocstrings[python-legacy] ~= 0.26",
    "mkdocs-awesome-pages-plugin ~= 2.9"
]

server = [
    "pymongo ~= 4.10",
    "Flask ~= 3.0",
    "Flask-Login ~= 0.6",
    "Flask-Cors ~= 5.0",
    "Flask-Dance ~= 7.1",
    "Flask-PyMongo ~= 2.3",
    "Flask-Mail ~= 0.10",
    "Flask-Compress ~= 1.15",
    "Werkzeug ~= 3.0",
    "python-dotenv ~= 1.0",
    "pillow ~= 10.4",
    "pyjwt ~= 2.9",
    "invoke ~= 2.2",
    "paramiko ~= 3.4",
]

apps = [
    # General
    "scipy ~= 1.13",
    # NMR
    "nmrglue ~= 0.10",
    # Electrochemistry
    "navani @ git+https://github.com/the-grey-group/navani.git@v0.1.7",
    "galvani ~= 0.4, < 0.5",
    "NewareNDA >= 2024",
    # Raman
    "pybaselines ~= 1.1",
    "rosettasciio ~= 0.6",
    # TGA
    "python-dateutil ~= 2.9",
]

chat = [
    "langchain == 0.3.2",
    "langchain-openai ~= 0.2",
    "langchain-anthropic ~= 0.2",
    "tiktoken ~= 0.8",
    "transformers ~= 4.42"
]


all = ["datalab-server[apps,server,chat]"]

[tool.mypy]
plugins = "pydantic.mypy"
ignore_missing_imports = true
follow_imports = "skip"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "Q"]
ignore = ["E501", "E402"]
fixable = ["A", "B", "C", "D", "E", "F", "I"]
unfixable = []
per-file-ignores = {}
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
