[project]
name = "datalab-server"
keywords = []
readme = "README.md"
license = "MIT"
authors = [
    { name = "Matthew Evans", email = "dev@datalab.industries" },
    { name = "Joshua Bocarsly" },
    { name = "datalab development team", email = "dev@datalab-org.io" },
]
dynamic = ["version"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "Topic :: Scientific/Engineering",
]

requires-python = ">= 3.10, < 3.12"

dependencies = [
    "bokeh ~= 2.4, < 3.0",
    "matplotlib ~= 3.8",
    "periodictable ~= 1.7",
    "pydantic[email, dotenv] < 2.0",
    "pint ~= 0.24",
    "pandas[excel] ~= 2.2",
    "pymongo ~= 4.7, < 4.11",
]

[project.urls]
homepage = "https://github.com/datalab-org/datalab"
repository = "https://github.com/datalab-org/datalab"
documentation = "https://docs.datalab-org.io"
changelog = "https://github.com/datalab-org/datalab/releases"

[build-system]
requires = ["setuptools >= 77.0.3", "setuptools_scm ~= 8.1", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
root = ".."
fallback_version = "0.1.0"
version_scheme = "post-release"

[project.optional-dependencies]
server = [
    "Flask ~= 3.0",
    "Flask-Login ~= 0.6",
    "Flask-Cors ~= 5.0",
    "Flask-Dance ~= 7.1",
    "Flask-PyMongo ~= 2.3",
    "Flask-Mail ~= 0.10",
    "Flask-Compress ~= 1.15",
    "Werkzeug ~= 3.0",
    "python-dotenv ~= 1.0",
    "pillow ~= 11.0",
    "pyjwt ~= 2.9",
    "invoke ~= 2.2",
    "paramiko ~= 3.4",
]
apps = [
    # General
    "scipy ~= 1.13",
    # NMR
    "nmrglue ~= 0.10",
    # Electrochemistry
    "navani >= 0.1.11",
    # Raman
    "pybaselines ~= 1.1",
    "rosettasciio ~= 0.3, < 0.4",
    # TGA
    "python-dateutil ~= 2.9",
]

app-plugins-git = [
    # Insitu
    "datalab-app-plugin-insitu",
]

chat = [
    # Hard upper pin on langchain is 0.3 as pydantic is not supported
    "langchain >= 0.2.6, < 0.3",
    "langchain-openai ~= 0.1",
    "langchain-anthropic ~= 0.1",
    "tiktoken ~= 0.7",
    "transformers ~= 4.42",
]
deploy = ["gunicorn ~= 23.0"]
all = ["datalab-server[apps,server,chat]"]

[tool.mypy]
plugins = "pydantic.mypy"
ignore_missing_imports = true
follow_imports = "skip"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "Q", "DTZ", "S"]
ignore = ["E501", "E402"]
per-file-ignores = {"tests/*" = ["S101"]}

fixable = ["A", "B", "C", "D", "E", "F", "I", "S"]
unfixable = []
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.isort]
known-first-party = ["pydatalab"]

[tool.uv]
dev-dependencies = [
    "pytest ~= 8.2",
    "pytest-cov ~= 5.0",
    "pytest-dependency ~= 0.6",
    "pre-commit ~= 4.0",
    "mongomock ~= 4.1",
    "mkdocs ~= 1.6",
    "mkdocs-material ~= 9.5",
    "mkdocstrings[python] ~= 0.29",
    "mkdocs-awesome-pages-plugin ~= 2.9",
]

[tool.uv.sources]
datalab-app-plugin-insitu = { git = "https://github.com/datalab-org/datalab-app-plugin-insitu.git", rev = "v0.1.5" }

[tool.pytest.ini_options]
addopts = "--cov-report=term --cov-report=xml --cov ./src/pydatalab"
filterwarnings = [
    "error",
    "ignore:.*np.bool8*:DeprecationWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
    "ignore:.*Polyfit may be poorly conditioned*:numpy.RankWarning",
    "ignore:.*invalid value encountered in sqrt*:RuntimeWarning",
    "ignore:.*kernel_size exceeds volume extent*:UserWarning",
    "ignore:.*divide by zero encountered in log10*:RuntimeWarning",
    "ignore:.*invalid value encountered in log10*:RuntimeWarning",
]

[tool.liccheck]
authorized_licenses = [
    "bsd",
    "new bsd",
    "bsd license",
    "new bsd license",
    "simplified bsd",
    "apache",
    "apache 2.0",
    "apache license 2.0",
    "apache software license",
    "apache software",
    "public domain",
    "gnu lgpl",
    "lgpl with exceptions or zpl",
    "isc license",
    "isc license (iscl)",
    "mit",
    "mit license",
    "python software foundation license",
    "python software foundation",
    "the unlicense",
    "zpl 2.1",
    "cmu license (MIT-CMU)",
    "Mozilla Public License 2.0",
]
unauthorized_licenses = [
    "\bgpl",
]
as_regex = true

[tool.liccheck.authorized_packages]
newarenda = ">=2025,<2026"
