[project]
name = "datalab-server"
keywords = ["research data management", "materials", "chemistry"]
description = "datalab is a research data management platform for materials science and chemistry."
readme = "README.md"
license = "MIT"
authors = [
    {name = "datalab development team", email = "dev@datalab-org.io"},
]
dynamic = ["version"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "Topic :: Scientific/Engineering",
]

requires-python = ">= 3.10, < 3.12"

dependencies = [
    "bokeh ~= 2.4, < 3.0",
    "matplotlib ~= 3.8",
    "periodictable ~= 1.7",
    "pydantic[email, dotenv] < 2.0",
    "pint ~= 0.24",
    "pandas[excel] ~= 2.2",
    "pymongo ~= 4.7",
    "deepdiff ~= 8.1",
]

[project.urls]
homepage = "https://github.com/datalab-org/datalab"
repository = "https://github.com/datalab-org/datalab"
documentation = "https://docs.datalab-org.io"
changelog = "https://github.com/datalab-org/datalab/releases"

[build-system]
requires = ["setuptools >= 77.0.3", "setuptools_scm ~= 8.1", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
root = ".."
fallback_version = "0.1.0"
version_scheme = "post-release"

[project.optional-dependencies]
server = [
    "Flask ~= 3.0",
    "Flask-Login ~= 0.6",
    "Flask-Cors ~= 6.0",
    "Flask-Dance ~= 7.1",
    "Flask-PyMongo ~= 2.3",
    "Flask-Mail ~= 0.10",
    "Flask-Compress ~= 1.15",
    "APScheduler ~= 3.10",
    "Werkzeug ~= 3.0",
    "python-dotenv ~= 1.0",
    "pillow ~= 11.0",
    "pyjwt ~= 2.9",
    "invoke ~= 2.2",
]
apps = [
    # General
    "scipy ~= 1.13",
    # NMR
    "nmrglue ~= 0.10",
    # Electrochemistry
    "navani >= 0.1.13",
    # Raman
    "pybaselines ~= 1.1",
    "renishawwire >= 0.1.16",
    # TGA
    "python-dateutil ~= 2.9",
    # XRD
    "matador-db >= 0.11.2",
    "psutil>=7.0.0",
]

app-plugins-git = [
    # Insitu
    "datalab-app-plugin-insitu",
]

chat = [
    # Hard upper pin on langchain is 0.3 as pydantic is not supported
    "langchain >= 0.2.6, < 0.3",
    "langchain-openai ~= 0.1",
    "langchain-anthropic ~= 0.1",
    "tiktoken ~= 0.7",
    "transformers ~= 4.42",
]
deploy = ["gunicorn ~= 23.0"]
all = ["datalab-server[apps,server,chat]"]

[tool.mypy]
plugins = "pydantic.mypy"
ignore_missing_imports = true
follow_imports = "skip"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "Q", "DTZ", "S", "G"]
ignore = ["E501", "E402"]
per-file-ignores = {"tests/*" = ["S101"]}

fixable = ["A", "B", "C", "D", "E", "F", "I", "S", "G"]
unfixable = []
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

logger-objects = ["pydatalab.logger.LOGGER"]

[tool.ruff.lint.isort]
known-first-party = ["pydatalab"]

[dependency-groups]
dev = [
    "pytest ~= 8.2",
    "pytest-cov ~= 5.0",
    "pytest-dependency ~= 0.6",
    "pytest-memray ~= 1.8",
    "pre-commit ~= 4.0",
    "mkdocs ~= 1.6",
    "mkdocs-material ~= 9.5",
    "mkdocstrings[python] ~= 0.29",
    "docstring-inheritance ~= 2.2",
    "griffe-inherited-docstrings ~= 1.1",
    "mkdocs-awesome-pages-plugin ~= 2.9",
    "markdown-callouts ~= 0.4",
]

[tool.uv.sources]
datalab-app-plugin-insitu = { git = "https://github.com/datalab-org/datalab-app-plugin-insitu.git", rev = "v0.3.2" }

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore:.*Capacity columns are not equal, replacing with new capacity column calculated from current and time columns and renaming the old capacity column to Old Capacity:UserWarning",
    "ignore:.*np.bool8*:DeprecationWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
    "ignore:.*JCAMP-DX key without value*:UserWarning",
    "ignore:.*Unable to find wavenumber unit*:UserWarning",
    "ignore:.*Unable to find wavenumber offset*:UserWarning",
]

[tool.liccheck]
authorized_licenses = [
    "bsd",
    "new bsd",
    "bsd license",
    "new bsd license",
    "simplified bsd",
    "apache",
    "apache 2.0",
    "apache license 2.0",
    "apache software license",
    "apache software",
    "public domain",
    "gnu lgpl",
    "lgpl with exceptions or zpl",
    "isc license",
    "isc",
    "isc license (iscl)",
    "LGPLv3+",
    "mit",
    "mit license",
    "python software foundation license",
    "python software foundation",
    "PSF-2.0",
    "the unlicense",
    "zpl 2.1",
    "cmu license (MIT-CMU)",
    "Mozilla Public License 2.0",
]
unauthorized_licenses = [
    "\bgpl",
]
as_regex = true

[tool.liccheck.authorized_packages]
datalab-org-galvani = ">=0.5"
flask-cors = ">=5,<7"
regex = ">=2025"
